--- a/RockWeb/Themes/RockNextGen/Styles/theme.css
+++ b/RockWeb/Themes/RockNextGen/Styles/theme.css
@@ -19718,27 +19718,31 @@ contentsection-body-overflow {
   background-color: var(--color-interface-softer);
 }
 
-.mobile-block-types {
+.mobile-block-types,
+.sms-action-components {
   border-bottom-left-radius: var(--rounded-medium);
 }
-.mobile-block-types .components-list {
+.mobile-block-types .components-list,
+.sms-action-components .components-list {
   margin: 6px;
 }
-.mobile-block-types .components-list > li ol {
+.mobile-block-types .components-list > li ol,
+.sms-action-components .components-list > li ol {
   display: flex;
   flex-wrap: wrap;
   padding: 0;
   margin: 0;
   list-style: none;
 }
-.mobile-block-types .components-list .component {
+.mobile-block-types .components-list .component,
+.sms-action-components .components-list .component {
   display: block;
   float: left;
   width: 45%;
   padding: var(--spacing-small) 0 var(--spacing-tiny);
   margin: 6px 2.5%;
   font-size: var(--font-size-xsmall);
-  color: var(--color-interface-strong);
+  color: var(--color-interface-strong) !important;
   text-align: center;
   cursor: -webkit-grab;
   cursor: -moz-grab;
@@ -19749,12 +19753,14 @@ contentsection-body-overflow {
   border-radius: var(--rounded-xsmall);
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.05);
 }
-.mobile-block-types .components-list .component:active {
+.mobile-block-types .components-list .component:active,
+.sms-action-components .components-list .component:active {
   cursor: -webkit-grabbing;
   cursor: -moz-grabbing;
   cursor: grabbing;
 }
-.mobile-block-types .components-list .component > i {
+.mobile-block-types .components-list .component > i,
+.sms-action-components .components-list .component > i {
   display: block;
   width: 30px;
   height: 30px;
@@ -19763,7 +19769,8 @@ contentsection-body-overflow {
   color: var(--color-interface-medium);
   text-align: center;
 }
-.mobile-block-types .components-list .component span {
+.mobile-block-types .components-list .component span,
+.sms-action-components .components-list .component span {
   display: flex;
   flex-direction: column;
   align-content: center;
@@ -19774,31 +19781,41 @@ contentsection-body-overflow {
   text-overflow: ellipsis;
   -webkit-line-clamp: 2;
   -webkit-box-orient: vertical;
+  color: var(--color-interface-strong) !important;
 }
-.mobile-block-types .components-list .component:hover {
+.mobile-block-types .components-list .component:hover,
+.sms-action-components .components-list .component:hover {
   border: 1px solid var(--color-primary);
   box-shadow: 0 0 0 1px var(--color-primary) inset;
 }
-.mobile-block-types .panel-palette {
+.mobile-block-types .panel-palette,
+.sms-action-components .panel-palette {
   margin: 0;
   border: 0;
   border-left: 1px solid var(--color-interface-softest);
   border-radius: 0;
 }
-.mobile-block-types .panel-palette .panel-heading {
+.mobile-block-types .panel-palette .panel-heading,
+.sms-action-components .panel-palette .panel-heading {
   font-weight: var(--font-weight-medium);
   text-align: center;
   background: var(--color-interface-softest);
   border-bottom: 3px solid var(--color-primary);
   border-radius: 0;
 }
-.mobile-block-types .component.gu-mirror, .mobile-block-types .sms-action.gu-mirror {
+.mobile-block-types .component.gu-mirror, .mobile-block-types .sms-action.gu-mirror,
+.sms-action-components .component.gu-mirror,
+.sms-action-components .sms-action.gu-mirror {
   list-style: none;
   cursor: -moz-grabbing !important;
   cursor: -webkit-grabbing !important;
   cursor: grabbing !important;
 }
-.mobile-block-types .component.gu-mirror::before, .mobile-block-types .component.gu-mirror::after, .mobile-block-types .sms-action.gu-mirror::before, .mobile-block-types .sms-action.gu-mirror::after {
+.mobile-block-types .component.gu-mirror::before, .mobile-block-types .component.gu-mirror::after, .mobile-block-types .sms-action.gu-mirror::before, .mobile-block-types .sms-action.gu-mirror::after,
+.sms-action-components .component.gu-mirror::before,
+.sms-action-components .component.gu-mirror::after,
+.sms-action-components .sms-action.gu-mirror::before,
+.sms-action-components .sms-action.gu-mirror::after {
   display: none;
 }
 
@@ -22676,6 +22693,148 @@ li.L9 {
   color: var(--color-interface-soft);
   text-transform: uppercase;
   letter-spacing: 1px;
+}
+
+.sms-action-components {
+  background: var(--color-interface-softest);
+}
+.sms-action-components .component {
+  border-radius: var(--rounded-small);
+}
+
+.sms-actions-container {
+  padding: 20px 50px !important;
+  counter-reset: section;
+}
+
+.sms-actions-container .component {
+  display: none;
+}
+
+.sms-actions-container .component.gu-transit {
+  display: block;
+}
+
+.sms-action {
+  --connector-size: 28px;
+  position: relative;
+  max-width: 500px;
+  padding: 20px var(--spacing-medium);
+  margin: 0 auto 20px;
+  font-size: 21px;
+  cursor: pointer;
+  background-color: var(--color-interface-softer);
+  border-radius: var(--rounded-small);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.3);
+}
+
+.sms-action::after {
+  position: absolute;
+  top: 20px;
+  left: calc((var(--connector-size) + 12px) * -1);
+  display: block;
+  width: var(--connector-size);
+  height: var(--connector-size);
+  color: var(--color-interface-softest);
+  text-align: center;
+  content: counter(section);
+  counter-increment: section;
+  background-color: var(--color-interface-strong);
+  border: 2px solid var(--color-interface-strongest);
+  border-radius: 50%;
+}
+
+.sms-action::before {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: calc(var(--connector-size) * -1);
+  width: 2px;
+  height: calc(100% + 20px);
+  margin-left: 1px;
+  content: "";
+  background: var(--color-interface-soft);
+}
+
+.sms-action.inactive {
+  color: rgba(45, 46, 49, 0.5);
+  background-color: var(--color-interface-soft);
+}
+
+.sms-action.inactive::after {
+  display: none;
+}
+
+.sms-action:first-child::before {
+  top: 20px;
+}
+
+.sms-action:last-child::before {
+  height: calc(100% - var(--connector-size));
+}
+
+.sms-action.editing {
+  box-shadow: 0 0 0 4px var(--color-primary);
+}
+
+.sms-action .reorder {
+  cursor: grab;
+}
+
+.sms-action > .fa {
+  width: 30px;
+  padding-right: 2px;
+  color: var(--color-interface-medium);
+  text-align: center;
+}
+
+.sms-pipeline-detail .sms-heading {
+  max-width: 500px;
+  padding: 20px var(--spacing-medium);
+  margin: 0 auto 20px;
+  font-size: 21px;
+  text-align: center;
+  cursor: pointer;
+  background-color: var(--color-interface-softest);
+  border-radius: var(--rounded-small);
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.3);
+  border: 1px solid var(--color-interface-soft);
+}
+
+.sms-pipeline-detail .drag-container {
+  height: 100%;
+}
+
+.sms-pipeline-detail .drag-container-empty::after {
+  display: block;
+  max-width: 500px;
+  height: 200px;
+  padding: 80px 0;
+  margin: 0 auto 20px;
+  font-size: 20px;
+  text-align: center;
+  content: "Drag and Drop Here";
+  border: 3px dashed rgba(0, 0, 0, 0.2);
+}
+
+/* Replace 18px with panel-body-padding */
+.sms-pipeline-detail h4 {
+  padding: var(--spacing-small) 18px;
+  margin: 1px -18px var(--spacing-medium);
+  font-size: var(--font-size-h5);
+  font-weight: 500;
+  background: var(--color-interface-softest);
+  border-top: 1px solid var(--color-interface-softer);
+}
+
+.sms-pipeline-detail .component.gu-transit {
+  max-width: 500px;
+  padding: 20px 0;
+  margin: 0 auto 20px;
+  font-size: 20px;
+  text-align: center;
+  list-style: none;
+  border: 3px solid rgba(0, 0, 0, 0.2);
 }
 
 /*
